--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-archwizard": "^2.1.0",
+    "ng2-currency-mask": "^4.4.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
