--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.4.6",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -28,6 +28,8 @@
     "jquery": "^3.3.1",
     "ng2-archwizard": "^2.1.0",
     "ng2-currency-mask": "^4.4.1",
+    "ngx-toastr": "^8.3.0",
+    "npm": "^5.7.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
